[package]
name = "sayhuuzoku-rs"
version = "0.1.0"
authors = ["YuheiNakasaka <yuhei.nakasaka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.2"
rusqlite = { version = "0.23", features=["bundled"] }